--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,392 @@
 body {
+  background: url("./images/pic-1.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  width: 95%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  row-gap: 10px;
   height: 100vh;
+  font-family: "Roboto", sans-serif;
 }
 
 #starting {
+  height: 25%;
   text-align: center;
+  display: inline-block;
+  max-width: 95vw;
+}
+
+#starting p {
+  margin-bottom: 0.5rem;
+}
+
+.mainH1,
+.mainP,
+.droppedElementLose,
+.droppedElementWin,
+.rightToLeftSlide {
+  text-shadow: 1.5px -1px 1.5px rgb(81, 195, 184);
+}
+
+.mainP {
+  font-size: 1.25rem;
+  font-weight: 500;
+  margin-bottom: 0.75rem;
+  margin-top: 2.5rem;
+}
+
+#openBtn,
+#closeBtn,
+input[value="YES"],
+input[value="NO"],
+input[value="EASY"],
+input[value="MEDIUM"],
+input[value="HARD"] {
+  padding: 8px 10px;
+  font-size: 0.875rem;
+  border: 2px solid #000;
+  border-radius: 3px;
+}
+
+#openBtn:hover,
+#closeBtn:hover,
+#openBtn:focus,
+#closeBtn:focus,
+input[value="YES"]:hover,
+input[value="NO"]:hover,
+input[value="EASY"]:hover,
+input[value="MEDIUM"]:hover,
+input[value="HARD"]:hover {
+  cursor: pointer;
+  /* animation: borders 1s linear; */
+  transform: translateY(-1px);
+  transition: linear 0.2s;
+  /* background-color: rgb(123, 165, 202); */
+  /* color: #fff; */
+  border-radius: 6px;
+  box-shadow: 1px 1px 1px grey;
+}
+
+#openBtn:hover,
+#openBtn:focus,
+input[value="YES"]:hover,
+input[value="YES"]:focus {
+  background-color: #60bfc1;
+}
+
+#closeBtn:hover,
+#closeBtn:focus,
+input[value="NO"]:hover,
+input[value="NO"]:hover {
+  background-color: #fdb7b9;
+}
+
+/* @keyframes borders {
+  0% {
+    transform: translateY(-50px);
+    border-top-left-radius: 8px;
+  }
+  25% {
+    transform: translateY(0px);
+    border-top-right-radius: 8px;
+  }
+  50% {
+    border-bottom-right-radius: 8px;
+  }
+  75% {
+    border-bottom-left-radius: 8px;
+  }
+  100% {
+    border-radius: 8px;
+  }
+} */
+
+#levelsContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+#mediumLevel,
+#easyLevel,
+#hardLevel {
+  width: 8rem;
+}
+
+#easyLevel:hover {
+  background-color: #60bfc1;
+}
+
+#mediumLevel:hover {
+  background-color: #f2d254;
+}
+
+#hardLevel:hover {
+  background-color: #fdb7b9;
+}
+
+.up,
+.left,
+.down,
+.right {
+  background-color: rgb(214, 190, 190);
+  height: 2.25rem;
+  width: 2.25rem;
+  border-radius: 3px;
+  margin: 0.125rem;
+  position: relative;
+  box-shadow: 1px 1px 2px;
+}
+
+.up:hover,
+.left:hover,
+.down:hover,
+.right:hover {
+  background-color: rgba(214, 190, 190, 0.8);
+}
+
+.up:active,
+.left:active,
+.down:active,
+.right:active {
+  background-color: rgba(214, 190, 190, 0.65);
+  transform: scale(0.98);
+  box-shadow: 1px 1px 1px;
+}
+
+.up i,
+.left i,
+.down i,
+.right i {
+  position: absolute;
+  top: 50%;
+  right: 30%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  font-size: 1.125rem;
+}
+
+.left,
+.down,
+.right {
+  display: inline-block;
+}
+
+.up {
+  margin: 0.125rem auto;
+}
+
+.droppedElementWin,
+.droppedElementLose {
+  font-size: 2rem;
+  font-weight: 500;
+  padding: 1rem;
+  border-radius: 5px;
+  display: inline-block;
+  /* background-color: rgba(0, 255, 247, 0.473); */
+  /* animation: fall 1.5s ease-in; */
+  transition: linear all;
+  color: #554b4b;
+}
+
+.droppedElementWin {
+  animation: fall 1.5s ease-in;
+}
+
+@keyframes fall {
+  0% {
+    transform: translateY(-300px) rotateZ(0);
+    opacity: 0.2;
+  }
+  15% {
+    transform: translateZ(-50px) rotateZ(-15deg);
+  }
+  20% {
+    transform: rotateZ(10deg);
+  }
+  25% {
+    transform: rotateZ(-10deg);
+  }
+  30% {
+    transform: rotateZ(6deg);
+    opacity: 1;
+  }
+  35% {
+    transform: rotateZ(-4deg);
+  }
+  40%,
+  100% {
+    transform: rotateZ(0);
+  }
+}
+
+.droppedElementLose {
+  color: #e33b3b;
+  animation: twistedFall 1.1s cubic-bezier(0.68, 0.11, 0.91, 0.99);
+}
+
+@keyframes twistedFall {
+  0% {
+    transform: translateY(-300px) rotateZ(45deg);
+    transform-origin: right bottom;
+  }
+  /* 15% {
+    transform: translateZ(-50px) rotateZ(-15deg);
+  }
+  20% {
+    transform: rotateZ(10deg);
+  }
+  25% {
+    transform: rotateZ(-10deg);
+  }
+  30% {
+    transform: rotateZ(6deg);
+    opacity: 1;
+  }
+  35% {
+    transform: rotateZ(-4deg);
+  } */
+  40% {
+    transform: translateY(0) rotateZ(45deg);
+    transform-origin: right bottom;
+  }
+  100% {
+    transform: rotateZ(0deg);
+    transform-origin: right bottom;
+  }
+}
+
+.rightToLeftSlide {
+  color: #554b4b;
+  font-size: 2rem;
+  font-weight: 500;
+  animation: rightToLeft 0.8s ease-in;
+  transition: linear all;
+  display: inline-block;
+}
+
+@keyframes rightToLeft {
+  0% {
+    transform: translateX(600px);
+    opacity: 0.2;
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+
+.leftToRightSlide {
+  color: #554b4b;
+  display: block;
+  font-size: 1.25rem;
+  margin-top: 0;
+  margin-bottom: 2.5rem !important;
+  font-weight: 500;
+  animation: leftToRight 1.3s ease-in;
+  transition: linear all;
+}
+
+@keyframes leftToRight {
+  0% {
+    transform: translateX(-1400px);
+    opacity: 0.2;
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+
+input {
+  margin: 0.375rem;
+  padding: 0.5rem 0.75rem;
+}
+#table {
+  max-width: 95vw;
+  border: 3px rgb(108, 189, 157) solid;
+  border-radius: 0.5rem;
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  #starting p {
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+  }
+
+  .droppedElementWin {
+    animation: fall 3s ease-in;
+  }
+
+  @keyframes fall {
+    0% {
+      transform: translateY(-600px) rotateZ(0);
+      opacity: 0.2;
+    }
+    15% {
+      transform: translateZ(-50px) rotateZ(-15deg);
+    }
+    20% {
+      transform: rotateZ(10deg);
+    }
+    25% {
+      transform: rotateZ(-10deg);
+    }
+    30% {
+      transform: rotateZ(6deg);
+      opacity: 1;
+    }
+    35% {
+      transform: rotateZ(-4deg);
+    }
+    40%,
+    100% {
+      transform: rotateZ(0);
+    }
+  }
+
+  td {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-wrap: break-word;
+  }
+
+  td img {
+    width: 0.77rem;
+    height: 0.77rem;
+  }
+
+  #table {
+    /* position: absolute; */
+    /* left: 100px; */
+    /* width: 95%; */
+    table-layout: fixed;
+    border-collapse: collapse;
+    display: block;
+    /* max-width: 90vw; */
+    border: 3px rgb(108, 189, 157) solid;
+    border-radius: 0.5rem;
+  }
+}
+
+.upDirection {
+  transform: rotate(180deg);
+}
+
+.rightDirection {
+  transform: rotate(90deg);
+}
+
+.leftDirection {
+  transform: rotate(-90deg);
 }
