--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  background-attachment: fixed;
   position: relative;
   width: 95%;
   height: 100%;
